--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "type": "module",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "joi": "^17.6.2",
     "pg": "^8.8.0"
   },
   "devDependencies": {
