--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.11.5",
     "express": "^4.18.1",
     "joi": "^17.6.2",
     "pg": "^8.8.0"
