--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dayjs": "^1.11.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "joi": "^17.6.2",
     "pg": "^8.8.0"
